--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://18.212.38.93:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
